src/test/ui/issue-22886.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-22886.rs:23:6
   |
23 | impl<'a> Iterator for Newtype { //~ ERROR E0207
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error

